# actilib

./: README.md  requirements.txt  setup.cfg
src/actilib/analysis/: detectability.py  gnl.py  rois.py  segmentation.py  ttf.py
src/actilib/examples/: example_gnl.py
src/actilib/gui/: TableModel.py  gnl-inspector.py  roi-creator.py  roicreator.py
src/actilib/helpers/: display.py  io.py
src/actilib/resources/: dicom_gnl.tar.xz  dicom_nps.tar.xz  dicom_ttf.tar.xz
tests/: test_gnl.py  test_roi.py  test_ttf_dprime.py
